amend test